Dev and people feedback

--- a/journal/201901.md
+++ b/journal/201901.md
@@ -28,7 +28,7 @@ Discussions:
 
 * Missing admin [feature](https://github.com/decred/politeia/issues/662) to censor public proposal was identified and discussed: there must be a way to remove a public proposal that was edited to include abusive content, implementation [started](https://github.com/decred/politeiagui/issues/991).
 * Developers are discussing [automated end-to-end testing](https://github.com/decred/politeiagui/issues/976) and [QA checklist](https://github.com/decred/politeiagui/issues/977) for major changes.
-* Large code refactoring discussion [started](https://github.com/decred/politeiagui/issues/990) to address complexity, performance and dev productivity issues. First proposed [solution](https://github.com/decred/politeiagui/issues/990#issuecomment-454535696) is to use GraphQL.
+* Large frontend code refactoring discussion [started](https://github.com/decred/politeiagui/issues/990) to address complexity, performance and dev productivity issues. First proposed [solution](https://github.com/decred/politeiagui/issues/990#issuecomment-454535696) is to use GraphQL.
 
 [dcrandroid](https://github.com/decred/dcrandroid): Final version 1.0 was released! Get it on Google Play Store for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) or [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet) wallets. Test coins can be requested via the [faucet](http://faucet.decred.org/). Feedback is welcome [on Reddit](https://www.reddit.com/r/decred/comments/am7j40/decred_wallet_for_android_v10_released/) and bug reports [on GitHub](http://github.com/decred/dcrandroid/issues).
 
@@ -46,7 +46,7 @@ Dev side: @buck54321 is [destroying](https://github.com/decred/dcrdata/pull/915)
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): Internal code improvements, preliminary work for Decrediton integration. A [monitoring page](https://mainnet-split-tickets.matheusd.com/) was set up that shows active splitting sessions from both VSPs that support it.
 
-[docs](https://github.com/decred/dcrdocs): New pages: [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/) outlines configuration requirements and desired skillset of VSP operators, [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) is based on the guide by @jz, [Address Details](https://docs.decred.org/advanced/address-details/) page explains address format an lists all possible kinds of addresses, [Contributing to Decred](https://docs.decred.org/contributing/contributing-to-decred/) explains how to become a paid Decred contractor. [Consensus Vote Archive](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/) moved to its own page. Multiple terms were added to [Glossary](https://docs.decred.org/glossary/).
+[docs](https://github.com/decred/dcrdocs): New pages: [Operating a VSP](https://docs.decred.org/advanced/operating-a-vsp/) outlines configuration requirements and desired skillset of VSP operators, [Solo PoS Voting](https://docs.decred.org/advanced/solo-proof-of-stake-voting/) is based on the guide by @jz, [Address Details](https://docs.decred.org/advanced/address-details/) page explains address format an lists all possible kinds of addresses, [Contributing to Decred](https://docs.decred.org/contributing/contributing-to-decred/) explains how to become a paid Decred contractor.
 
 Deep dive security discussion in #documentation concluded that it is possible to assemble general [computer security guidelines](https://github.com/xaur/decred-issues/issues/101) that will be beneficial for the whole space.
 
@@ -71,7 +71,7 @@ Congratulations to 6 new contributors [listed](https://github.com/decred/dcrweb/
 
 * David Habibi (@eSizeDave, community manager - Australia)
 * Elian Huesca (@elian, community manager - Mexico)
-* Marcelo Lustosa (@lustosa, illustrator)
+* Marcelo Martins (@mm, Community Manager - Portugal)
 * Mariusz Szyma (@mario, community manager - Poland)
 * Morphy Tsai (@morphymore, community manager - Taiwan)
 * Tomasz Porwit (@kozel, education and outreach)
@@ -86,7 +86,7 @@ Independent Decred contractors [published](https://medium.com/decred/decred-inde
 
 Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/1087486930093264897), congrats @degeri! Check the rules and guidelines on the new website [bounty.decred.org](https://bounty.decred.org/). Website is built with Hugo and the code is [on GitHub](https://github.com/decred/dcrbounty) so feel free to contribute. {anyone else to credit?}
 
-Intro blog post https://medium.com/decred/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9
+Intro blog post https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9
 
 @oregonisaac {@isaac?} is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the RPF document was posted and discussed here https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org , there is some concensus to use 2-phase voting: first vote to see if stakeholders want ATMs at all, and second to chose a specific implementation. Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
 
