Dev, Ppl, Gov, Media fixes

--- a/journal/201901.md
+++ b/journal/201901.md
@@ -4,21 +4,23 @@
 
 {introduction, major news of the month}
 
-{Android release}
+{Android release, end of Jan or early Feb? include?}
+
+Node and wallet software v1.4.0 was released on Feb 6 after extensive testing. Full release notes and downloads are [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). As always, make sure to [verify the downloads](https://docs.decred.org/advanced/verifying-binaries/). More coverage in Feb issue of Decred Journal.
+
+v1.4.0 contains a consensus vote that is critical for Lightning Network, upgrade is highly recommended.
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): An [issue](https://github.com/decred/dcrd/issues/1568) was discovered in v1.4.0 RC1. The large change to UTXO set semantics accidently fixed wrong behavior in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to correct it. Thanks to everybody who helped to discover and fix the bug.
+[dcrd](https://github.com/decred/dcrd): An [issue](https://github.com/decred/dcrd/issues/1568) was discovered in v1.4.0 RC1. The large change to UTXO set semantics accidently fixed a bug in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to correct it. Thanks to everybody who helped to discover and fix the bug.
 
-{comment on the damage e.g. lost rewards?}
-
-The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and will be included in the final v1.4.0 release. The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Side effect of this work was [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area.
+The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and included in the final [v1.4.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Side effect of this work was [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area.
 
 Discussion [started](https://github.com/decred/dcrd/issues/1593) how to further improve stake difficulty algorithm by removing oscillations - this could make ticket price even more smooth.
 
 [dcrwallet](https://github.com/decred/dcrwallet): {remove this if nothing significant}
 
-[Decrediton](https://github.com/decred/decrediton): bug fixes and preparation for v1.4 release.
+[Decrediton](https://github.com/decred/decrediton): bug fixes and preparation for v1.4.0 release.
 
 A feature to specify config options as command line arguments [merged](https://github.com/decred/decrediton/pull/1975) to master.
 
@@ -40,7 +42,7 @@ Trezor: {any news?}
 
 [dcrdata](https://github.com/decred/dcrdata): New home page design is [advancing](https://github.com/decred/dcrdata/pull/921). Values on the home page now [update automatically](https://github.com/decred/dcrdata/pull/961) when new block is found. Exchange rate monitoring was [added](https://github.com/decred/dcrdata/pull/951) to the backend that enables showing USD values on the UI. HTTPS is now enforced on `explorer` and `mainnet` subdomains ([discussion](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154818146313660CWvZy:decred.org)).
 
-Check the reworked home page and other new features at [beta.dcrdata.org](https://beta.dcrdata.org/), which hosts beta version of the upcoming v4 release.
+New home page design that includes exchange rate, new address table views, improved charts and speed optimizations are [available](https://twitter.com/decredexplorer/status/1093182831487053825) in v4 beta at [beta.dcrdata.org](https://beta.dcrdata.org/). Detailed release notes will be compiled with the release candidate.
 
 Dev side: @buck54321 is [destroying](https://github.com/decred/dcrdata/pull/915) imperative jQuery code. Team is preparing stress testing of Insight API _(they call it torture testing, ouch)_.
 
@@ -78,15 +80,13 @@ Congratulations to 6 new contributors [listed](https://github.com/decred/dcrweb/
 
 4 inactive developers [removed](https://github.com/decred/dcrweb/issues/528) from decred.org: Cruz Molina (@freethinkingaway, dcrdata), Huy Nguyen Tuan (@huyntsgs, dcrwallet), Macaulay Davies (@mcedward), Rohit Nagori.
 
-Independent Decred contractors [published](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) their plans for 2019, [discussed](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15476119656176jVTYW:decred.org) in #marketing.
+Independent Decred contractors [published](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) their plans for 2019, thanks to ~15 people who contributed. The post triggered a [discussion](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15476119656176jVTYW:decred.org) about roadmaps, central planning and contractor autonomy, as well as commentary from Ditto.
 
 ## Governance
 
 {high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
 
-Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/1087486930093264897), congrats @degeri! Check the rules and guidelines on the new website [bounty.decred.org](https://bounty.decred.org/). Website is built with Hugo and the code is [on GitHub](https://github.com/decred/dcrbounty) so feel free to contribute. {anyone else to credit?}
-
-Intro blog post https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9
+Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/1087486930093264897). Check the rules on the new website [bounty.decred.org](https://bounty.decred.org/) and the intro blog post on [hackernoon](https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9). Website is built with Hugo and the code is [on GitHub](https://github.com/decred/dcrbounty) so feel free to contribute. Credits to @fernandoabolafio and @jholdstock for majority of the site work. Bounty team who decides on validity of submissions and payouts includes @degeri, @dnldd, @fernandoabolafio, @jholdstock and @matheusd. Congrats team with the launch!
 
 @oregonisaac {@isaac?} is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the RPF document was posted and discussed here https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org , there is some concensus to use 2-phase voting: first vote to see if stakeholders want ATMs at all, and second to chose a specific implementation. Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
 
@@ -177,8 +177,6 @@ Custom Decred merch on the Decredible shop https://www.reddit.com/r/decred/comme
 
 Important notice: new batch of Stakey plushies is available! https://www.reddit.com/r/decred/comments/ahalex/new_batch_of_stakey_plushies_available/
 
-@Matt D started [Decred Aggregator](https://t.me/DecredAgg) in Telegram that aims to collect news, press, videos, podcasts, Decred announcements, trending tweets and Reddit posts, as well as market stats. Introduction and motivation was shared in [this chat]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154825336714293nfWdU:decred.org).
-
 ## Events
 
 Attended:
@@ -199,11 +197,15 @@ Open source and hacker oriented events like DEFCON, CCC and FOSDEM were discusse
 
 [blog.dcrclub.org](https://blog.dcrclub.org/) is a new website in Chinese that collects various articles and translations in one place. The source hosted [on GitHub](https://github.com/0x5826/blog.dcrclub.org) makes it easy to contribute or mirror the website on other domain for more resiliency. Credits to @TogT4V (Telegram) for starting the site.
 
-@butterfly published some articles about Decred in [Arabic blog](https://decred-arabia.blogspot.com/2019/01/blog-post.html).
+New [Arabic blog](https://decred-arabia.blogspot.com/2019/01/blog-post.html) about Decred started by @butterfly. There are some challenges with publishing arabic text on the web, help is welcome in #writers_room.
 
-@michae2xl [started](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$1548814257223928fVjiP:matrix.org) Portuguese podcasts that are available on [Soundcloud](https://soundcloud.com/user-770106247/), Spotify, Apple Podcasts and Google Podcasts - search "Decred Brasil".
+Portuguese podcasts [started](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$1548814257223928fVjiP:matrix.org) by @michae2xl, available on [Soundcloud](https://soundcloud.com/user-770106247/), Spotify, Apple Podcasts and Google Podcasts - search for "Decred Brasil".
 
-[Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia is under attack again. On Jan 8 user R2d232h2 [removed](https://en.wikipedia.org/w/index.php?title=Decred&diff=prev&oldid=877407037) a bunch of "bad sources". On Jan 10 the same user [vandalized](https://en.wikipedia.org/w/index.php?title=Decred&diff=next&oldid=877407037) the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 the second purge was reverted and R2d232h2 was banned as sockpuppet, but next day the removal was applied again. As it stands after the cutting, the page is very small and has all [votes](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media are [not good enough](https://en.wikipedia.org/wiki/Talk:Decred#Request_edit_on_12_January_2019) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. Extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547202592212vKSyw:decred.org) ([continued](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15472392171087ucpIb:decred.org)), including possilble solutions. On Jan 18 the page was deleted and removed from List of cryptocurrencies that contains more notable entries. More details are captured in [this issue](https://github.com/xaur/decred-issues/issues/79).
+[@decredexplorer](https://twitter.com/decredexplorer) is a new Twitter account focused on dcrdata, thanks to @michae2xl for organizing it.
+
+@Matt D started [Decred Aggregator](https://t.me/DecredAgg) in Telegram that aims to collect news, press, videos, podcasts, Decred announcements, trending tweets and Reddit posts, as well as market stats. Introduction and motivation was shared in [this chat]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154825336714293nfWdU:decred.org).
+
+[Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia was deleted. On Jan 8 user R2d232h2 [removed](https://en.wikipedia.org/w/index.php?title=Decred&diff=prev&oldid=877407037) a bunch of "bad sources". On Jan 10 the same user [vandalized](https://en.wikipedia.org/w/index.php?title=Decred&diff=next&oldid=877407037) the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 the second purge was reverted and R2d232h2 was banned as sockpuppet, but next day the removal was applied again. As it stands after the cutting, the page is very small and has all [votes](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media are [not good enough](https://en.wikipedia.org/wiki/Talk:Decred#Request_edit_on_12_January_2019) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. Extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547202592212vKSyw:decred.org) ([continued](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15472392171087ucpIb:decred.org)), including possilble solutions. On Jan 18 the page was deleted and removed from List of cryptocurrencies that contains more notable entries. More details are captured in [this issue](https://github.com/xaur/decred-issues/issues/79).
 
 The good news, is it [can mean](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15474897963391hhDDU:decred.org) Decred is moving in the right direction.
 
