--- a/journal/201901.md
+++ b/journal/201901.md
@@ -56,6 +56,7 @@ Deep dive security discussion in #documentation concluded that it is possible to
 
 Other:
 
+* New [Bug Bounty](https://bounty.decred.org/) website is built with Hugo, source code [on GitHub](https://github.com/decred/dcrbounty) is open for bug reports and contributions.
 * {comment on contractor-mgmt sndurkin or ay-p? is it worth mentioning it yet?}
 * More terminology changes in dcrwallet, dcrdocs and dcrweb.
 * Projects are gradually switching to a faster golangci-lint linter.
@@ -84,19 +85,23 @@ Independent Decred contractors [published](https://medium.com/decred/decred-inde
 
 ## Governance
 
-{high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
+In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 16,776 DCR and spent 9,991 DCR. Using January's daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in December, it is also informative to consider them in the context of the December average daily rate of ${} - in which case the USD received/spent figures are ${}K/${}K.
 
-Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/1087486930093264897). Check the rules on the new website [bounty.decred.org](https://bounty.decred.org/) and the intro blog post on [hackernoon](https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9). Website is built with Hugo and the code is [on GitHub](https://github.com/decred/dcrbounty) so feel free to contribute. Credits to @fernandoabolafio and @jholdstock for majority of the site work. Bounty team who decides on validity of submissions and payouts includes @degeri, @dnldd, @fernandoabolafio, @jholdstock and @matheusd. Congrats team with the launch!
+Contractors are now [getting paid](https://docs.decred.org/contributing/contributor-compensation/) on ~15th of each month for the prior month's work. The delay between invoicing and getting paid was cut in half from ~30th day. Work is ongoing to further lower this delay.
 
-@oregonisaac {@isaac?} is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the RPF document was posted and discussed here https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org , there is some concensus to use 2-phase voting: first vote to see if stakeholders want ATMs at all, and second to chose a specific implementation. Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
+Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/1087486930093264897). Check the rules on the new website [bounty.decred.org](https://bounty.decred.org/) and the intro blog post on [hackernoon](https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9). Credits to @fernandoabolafio and @jholdstock for majority of the site work. Bounty team who decides on validity of submissions and payouts includes @degeri, @dnldd, @fernandoabolafio, @jholdstock and @matheusd. Congrats team with the launch!
 
-@Dustorf is drafting proposals for [marketing budget]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [events budget](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) to improve transparency and engage stakeholders.
+@oregonisaac is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration. Draft of the proposal was posted and discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154828004015153jWdiD:decred.org). There is some concensus to use 2-phase votin where first vote determines if stakeholders want ATMs at all, and second to choose a specific implementation. This process is similar to RFP ([request for proposal](https://en.wikipedia.org/wiki/Request_for_proposal)). Another good point discussed was whether to wait for mobile apps releases before proceeding with the ATMs.
+
+{^ still relevant?}
+
+@Dustorf drafted proposals for [marketing budget](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [events budget](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) to improve transparency increase stakeholder's influence on funding decisions. Second iteration of [events spending](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/) pre-proposal is open to feedback on Reddit.
 
 Discussions:
 
-* attack vector: offer to airdrop some token to stakeholders in return for funding a proposal https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15468733339790vCEoH:decred.org
-* reflecting on engagement in Politeia https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15481365491827928DiBLm:matrix.org
-* governance UX to pre-emptively address bad proposals https://github.com/decred/politeia/issues/678
+* Baeond proposal spurred a [discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15468733339790vCEoH:decred.org) of an attack vector where stakeholders are offered an airdrop of some token in return for them approving a proposal.
+* [Engagement](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15481365491827928DiBLm:matrix.org) and satisfaction with Politeia so far.
+* How [UX enhancements](https://github.com/decred/politeia/issues/678) can help voters to pre-emptively address bad proposals and stay vigilant.
 
 ## Network
 
