--- a/journal/201901.md
+++ b/journal/201901.md
@@ -8,11 +8,11 @@
 
 Node and wallet software v1.4.0 was released on Feb 6 after extensive testing. Full release notes and downloads are [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). As always, make sure to [verify the downloads](https://docs.decred.org/advanced/verifying-binaries/). More coverage in Feb issue of Decred Journal.
 
-v1.4.0 contains a consensus vote that is critical for Lightning Network, upgrade is highly recommended.
+New consensus vote agenda added in v1.4.0 is critical for Lightning Network, upgrade is highly recommended.
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): An [issue](https://github.com/decred/dcrd/issues/1568) was discovered in v1.4.0 RC1. The large change to UTXO set semantics accidently fixed a bug in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to correct it. Thanks to everybody who helped to discover and fix the bug.
+[dcrd](https://github.com/decred/dcrd): An [issue](https://github.com/decred/dcrd/issues/1568) was discovered in v1.4.0 RC1. The large change to UTXO set semantics accidentally fixed a bug in consensus rules. Old incorrect behavior was [preserved](https://github.com/decred/dcrd/pull/1570) until a consensus vote can take place to correct it. Thanks to everybody who helped to discover and fix the bug.
 
 The code for the consensus vote is [completed](https://github.com/decred/dcrd/pull/1579) and included in the final [v1.4.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The fix and vote was prioritized because it is required for Lightning Network. [DCP004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) (Decred Change Proposal) explains the change in detail and reminds of useful applications of relative locks beyond LN. Side effect of this work was [refactoring](https://github.com/decred/dcrd/pull/1583) and reinforcement of tests in that area.
 
@@ -320,7 +320,7 @@ The NEM Foundation [announced](https://forum.nem.io/t/nem-foundation-message-to-
 
 Updated version of the "forkonomy" research by Wassim Alsindi (@parallelind) was [published](https://hackernoon.com/towards-an-analytical-discipline-of-forkonomy-summer-2018-e6da993ee3f9) along with an up-to-date [follow-up](https://medium.com/@parallelind/forkonomy-revisited-where-are-they-now-73fbfbec6b4d).
 
-Hcash forked a few [more](https://archive.today/rEhWX) Decred projects: [Autonomy](https://archive.today/KTCdX) (Politeia), [hcexplorer](https://archive.today/2KTtW) and [hctime](https://archive.today/K151A). In Politeia, they accidently [removed](https://archive.today/ECplt) copyright of Decred developers and forgot to rename the project. After being notified they quickly reacted by removing multiple repositories from TKFORKED account,  [reinstating](https://github.com/TKFORKED/autonomy/commit/4b05c2c31829df64be69e546d939a563247e1927) the license and [renaming](https://github.com/TKFORKED/autonomy/commit/98d5f63f676e45e6a91eba99da3db985effdb1f2) the Politeia fork to Autonomy. A few [missed](https://twitter.com/michae2xl/status/1084270468234915840) subtle Decred icons were fixed. Some [projects](https://archive.today/https://github.com/HcashOrg/hc*) were forked with their commit history erased and without marking them as forks on GitHub. Complaints on their subreddit were silently censored without reply ([1](https://www.reddit.com/r/hcash/comments/adwmx2/hcash_being_shady_again/), [2](https://www.reddit.com/r/hcash/comments/afepsc/hcash_cant_be_bothered_to_change_the_decred_logo/). Discussed [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154696507010921TRgid:decred.org).
+Hcash forked a few [more](https://archive.today/rEhWX) Decred projects: [Autonomy](https://archive.today/KTCdX) (Politeia), [hcexplorer](https://archive.today/2KTtW) and [hctime](https://archive.today/K151A). In Politeia, they accidentally [removed](https://archive.today/ECplt) copyright of Decred developers and forgot to rename the project. After being notified they quickly reacted by removing multiple repositories from TKFORKED account,  [reinstating](https://github.com/TKFORKED/autonomy/commit/4b05c2c31829df64be69e546d939a563247e1927) the license and [renaming](https://github.com/TKFORKED/autonomy/commit/98d5f63f676e45e6a91eba99da3db985effdb1f2) the Politeia fork to Autonomy. A few [missed](https://twitter.com/michae2xl/status/1084270468234915840) subtle Decred icons were fixed. Some [projects](https://archive.today/https://github.com/HcashOrg/hc*) were forked with their commit history erased and without marking them as forks on GitHub. Complaints on their subreddit were silently censored without reply ([1](https://www.reddit.com/r/hcash/comments/adwmx2/hcash_being_shady_again/), [2](https://www.reddit.com/r/hcash/comments/afepsc/hcash_cant_be_bothered_to_change_the_decred_logo/). Discussed [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154696507010921TRgid:decred.org).
 
 Grin [struggles](https://www.grin-forum.org/t/solved-early-disappointments/3682) to get funding.
 
