--- a/journal/201901.md
+++ b/journal/201901.md
@@ -138,42 +138,36 @@ Always do your research when using wallets or services, especially custodial one
 
 ## Adoption
 
-New merchants:
-
-* {}
-
-{applications of Decred blockchain and related projects: Politeia, atomicswap}
-
-{investment adoption}
-
-BlueYard (one of Decred investors) [announced](https://medium.com/@BlueYard/blueyard-2-3d0bbaf1f1b6) they have raised their second fund and explained what "contrarian" projects they invest in.
+BlueYard [announced](https://medium.com/@BlueYard/blueyard-2-3d0bbaf1f1b6) second fund raise and explained what their strategy of investing into contrarian projects. {Adoption or Relevant External}?
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+Marketing team is [planning](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15468814029997AWtQJ:decred.org) to approach reporters publishing inaccuracies about Decred. As a test case for that workflow one horrible article was scrutinized by the community and Ditto collected the feedback for that and future cases. Ditto has [systems](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154690407510431bVTJQ:decred.org) to catch every piece of media written about Decred. As they learn the community, it will be possible to address inaccuracies in real time. Another issue discussed was integrating Ditto's [corrections workflow](https://github.com/xaur/decred-issues/issues/71) with voluntary submissions from the community.
 
-Ditto's Bi-Weekly Update https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154688457110052CiWYd:decred.org , one thing they learned that week was:
+Tagline for Decred was extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154711632712869dqRko:decred.org) and [on Reddit](https://www.reddit.com/r/decred/comments/afctai/tagline_to_capture_the_decred_project/). Final version of messaging settled it on "Decred: Secure. Adaptable. Self-Funding." which gathered most support. As time goes this will be revised to adapt to ever changing space.
+
+Monthly update from Ditto:
+
+* Went through several iterations of the foundational messaging document with significant community input and received positive feedback on the [final version](https://pastebin.com/E5L6u2RV). (discussions: [second](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154706728112462ubmNo:decred.org) version, [final](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154880432321730DYSYl:decred.org) version)
+* Worked with the community to source commentary on 51% attacks for future use with reporters when another attack inevitably happens - the goal being to get Decred's message in front of journalists even when it doesn't have any hard news to share.
+* Media trained three Decred members.
+* Secured media coverage: A [feature article](https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/) in Forbes ([report](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547232200845NiZnO:decred.org)), [video interview](https://www.youtube.com/watch?v=CUxDxJ4YAUA) with Joshua for Bitsonline, commentary by @richardred on the delay in Ethereum's hard fork in [Breaker Mag](https://breakermag.com/what-we-know-about-the-vulnerability-behind-ethereums-rollback-of-constantinople/) and [Crypto Briefing](https://cryptobriefing.com/scaling-delay-ethereum-constantinople/).
+* Drafted an announcement of the bug bounty program and [placed](https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9) it in Hacker Noon - thereby reaching a much broader pool of developers.
+* Facilitated two interviews that are pending media coverage.
+* Flew down to the North American Bitcoin Conference, where Ditto facilitated interviews between Decred and reporters (Cheddar TV, Altcoin Buzz, etc.) and spent quality time with the team.
+* Worked closely with Dustin on an events plan that encompasses both events Decred wants to speak at and events it wants to have a booth at.
+* Submitted an application for Jake to speak at Consensus 2019.
+* Worked closely with Dustin on a marketing and communications plan for the first half of 2019, spanning messaging, media training, media relations, events and speaking, and strategy. This plan is still pending.
+
+Individuals are advised to share media coverage because amplification is just as important as the media placement itself.
+
+For even more detail see the biweekly updates on [Jan 7](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154688457110052CiWYd:decred.org) and [Jan 18](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15478384869864RTCsv:decred.org), nice discovery in one of them was:
 
 > The community welcomes and encourages questions, even if the person asking fears that their questions are "stupid." We've observed a spirit of collaboration and willingness to help that we haven't seen in other communities. It's refreshing!
 
-Ditto has set up a system to catch every piece of media written about Decred and to address inaccuracies in real time. As a test case for that workflow one horrible article was scrutinized by the community and Ditto collected the feedback for that and future cases. Another issue discussed was integrating Ditto's workflow with voluntary submissions from the community. https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15468814029997AWtQJ:decred.org
+Decredible shop was [renewed](https://www.reddit.com/r/decred/comments/ae07as/custom_decred_merch_with_19_discount_in_the/) with extra items and new Decred logos. All products can be personalized and tweaked.
 
-Ditto shared a second version of the Foundational Messaging document https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154706728112462ubmNo:decred.org
-https://docs.google.com/document/d/19r9SjOWin4Fb9E2_90S7mdsG0BNxRBSYzsJjSYK2Jjw/edit
-
-[Final version](https://pastebin.com/E5L6u2RV) of the document was [shared](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154880432321730DYSYl:decred.org) at the end of Jan.
-
-Tagline for Decred was extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154711632712869dqRko:decred.org) and [on Reddit](https://www.reddit.com/r/decred/comments/afctai/tagline_to_capture_the_decred_project/).
-
-On Jan 11 Ditto [reported](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547232200845NiZnO:decred.org) about the Forbes article and advised individuals to share it because amplification is just as important as the media placement itself.
-
-Example of "thought leadership" placement can be seen the [comment here](https://cryptobriefing.com/scaling-delay-ethereum-constantinople/) by @richardred. {keep? reword?} In the following [discussion](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15476630757260cGbJc:decred.org) of it an issue was raised that Decred and Ethereum have very different backgrounds and this must be taken into account.
-
-Ditto's Bi-Weekly Update https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15478384869864RTCsv:decred.org
-
-Custom Decred merch on the Decredible shop https://www.reddit.com/r/decred/comments/ae07as/custom_decred_merch_with_19_discount_in_the/
-
-Important notice: new batch of Stakey plushies is available! https://www.reddit.com/r/decred/comments/ahalex/new_batch_of_stakey_plushies_available/
+Urgent notice: new batch of Stakey plushies is [available](https://www.reddit.com/r/decred/comments/ahalex/new_batch_of_stakey_plushies_available/)!
 
 ## Events
 
