--- a/journal/201901.md
+++ b/journal/201901.md
@@ -115,7 +115,7 @@ Nodes: As of Feb 4 there were 197 public listening nodes and 369 normal nodes pe
 
 [Class action](https://www.reddit.com/r/decred/comments/ae8hy8/class_action_lawsuit_officially_filed_against/) filed over Obelisk's sale of SC1 and DCR1.
 
-@dnldd is [working](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) on an open source Decred mining pool implementation.
+Open source Decred mining pool implementation is [in the works](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) by @dnldd.
 
 ## Integrations
 
@@ -134,25 +134,27 @@ Second episode of infrastructure interview series by @kozel [featured](https://m
 
 > Our best selling product on the website has undoubtedly been the famed [Decred Jacket](https://www.cryptoemporium.eu/product/decred-jacket/)! It's been an honour to serve the Decred community for so long and help market a project I truly believe in.
 
-Always do your research when using wallets or services, especially custodial ones.
+Always do your research _before_ using wallets or services, especially those that take custody of your funds.
 
 ## Adoption
 
-BlueYard [announced](https://medium.com/@BlueYard/blueyard-2-3d0bbaf1f1b6) second fund raise and explained what their strategy of investing into contrarian projects. {Adoption or Relevant External}?
+BlueYard [announced](https://medium.com/@BlueYard/blueyard-2-3d0bbaf1f1b6) second fund raise and explained what their strategy of investing into contrarian projects.
+
+{^ Adoption or Relevant External}?
 
 ## Outreach
 
-Marketing team is [planning](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15468814029997AWtQJ:decred.org) to approach reporters publishing inaccuracies about Decred. As a test case for that workflow one horrible article was scrutinized by the community and Ditto collected the feedback for that and future cases. Ditto has [systems](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154690407510431bVTJQ:decred.org) to catch every piece of media written about Decred. As they learn the community, it will be possible to address inaccuracies in real time. Another issue discussed was integrating Ditto's [corrections workflow](https://github.com/xaur/decred-issues/issues/71) with voluntary submissions from the community.
+Marketing team is [planning](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15468814029997AWtQJ:decred.org) to approach reporters publishing inaccuracies about Decred. As a test case for that workflow one horrible article was scrutinized by the community and Ditto collected the feedback for that and future cases. Ditto has [systems](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154690407510431bVTJQ:decred.org) to catch every piece of media written about Decred. As they get to know the community better, it will be possible to address inaccuracies in real time. Another issue discussed was integrating Ditto's [corrections workflow](https://github.com/xaur/decred-issues/issues/71) with voluntary submissions from the community.
 
-Tagline for Decred was extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154711632712869dqRko:decred.org) and [on Reddit](https://www.reddit.com/r/decred/comments/afctai/tagline_to_capture_the_decred_project/). Final version of messaging settled it on "Decred: Secure. Adaptable. Self-Funding." which gathered most support. As time goes this will be revised to adapt to ever changing space.
+Tagline for Decred was extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154711632712869dqRko:decred.org) and [on Reddit](https://www.reddit.com/r/decred/comments/afctai/tagline_to_capture_the_decred_project/). Final version of messaging settled it on "Decred: Secure. Adaptable. Self-Funding." which gathered most support. As time goes this will be revised to adapt to the ever changing space.
 
-Monthly update from Ditto:
+January update from Ditto:
 
 * Went through several iterations of the foundational messaging document with significant community input and received positive feedback on the [final version](https://pastebin.com/E5L6u2RV). (discussions: [second](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154706728112462ubmNo:decred.org) version, [final](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154880432321730DYSYl:decred.org) version)
 * Worked with the community to source commentary on 51% attacks for future use with reporters when another attack inevitably happens - the goal being to get Decred's message in front of journalists even when it doesn't have any hard news to share.
 * Media trained three Decred members.
-* Secured media coverage: A [feature article](https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/) in Forbes ([report](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547232200845NiZnO:decred.org)), [video interview](https://www.youtube.com/watch?v=CUxDxJ4YAUA) with Joshua for Bitsonline, commentary by @richardred on the delay in Ethereum's hard fork in [Breaker Mag](https://breakermag.com/what-we-know-about-the-vulnerability-behind-ethereums-rollback-of-constantinople/) and [Crypto Briefing](https://cryptobriefing.com/scaling-delay-ethereum-constantinople/).
-* Drafted an announcement of the bug bounty program and [placed](https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9) it in Hacker Noon - thereby reaching a much broader pool of developers.
+* Secured media coverage: [feature article](https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/) in Forbes ([report](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547232200845NiZnO:decred.org)), [video interview](https://www.youtube.com/watch?v=CUxDxJ4YAUA) with Joshua for Bitsonline, commentary by @richardred on the delay in Ethereum's hard fork in [Breaker Mag](https://breakermag.com/what-we-know-about-the-vulnerability-behind-ethereums-rollback-of-constantinople/) and [Crypto Briefing](https://cryptobriefing.com/scaling-delay-ethereum-constantinople/).
+* Drafted an announcement of the bug bounty program and [placed](https://hackernoon.com/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9) it in Hacker Noon - thereby reaching a much broader pool of developers, compared to Decred's own channels.
 * Facilitated two interviews that are pending media coverage.
 * Flew down to the North American Bitcoin Conference, where Ditto facilitated interviews between Decred and reporters (Cheddar TV, Altcoin Buzz, etc.) and spent quality time with the team.
 * Worked closely with Dustin on an events plan that encompasses both events Decred wants to speak at and events it wants to have a booth at.
@@ -161,13 +163,17 @@ Monthly update from Ditto:
 
 Individuals are advised to share media coverage because amplification is just as important as the media placement itself.
 
-For even more detail see the biweekly updates on [Jan 7](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154688457110052CiWYd:decred.org) and [Jan 18](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15478384869864RTCsv:decred.org), nice discovery in one of them was:
+For even more detail see the biweekly updates on [Jan 7](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154688457110052CiWYd:decred.org) and [Jan 18](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15478384869864RTCsv:decred.org). Nice discovery in one of them:
 
 > The community welcomes and encourages questions, even if the person asking fears that their questions are "stupid." We've observed a spirit of collaboration and willingness to help that we haven't seen in other communities. It's refreshing!
 
-Decredible shop was [renewed](https://www.reddit.com/r/decred/comments/ae07as/custom_decred_merch_with_19_discount_in_the/) with extra items and new Decred logos. All products can be personalized and tweaked.
+Other:
 
-Urgent notice: new batch of Stakey plushies is [available](https://www.reddit.com/r/decred/comments/ahalex/new_batch_of_stakey_plushies_available/)!
+* It is [rumored](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15478503329998HCAzR:decred.org) that Ditto can arrange a mad beard that entitles one to wear Silver Decred Jacket.
+* @anshawblack [dropped](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154792069410439nSRtR:decred.org) Decred merch in all record stores of Miami.
+* Decredible shop was [renewed](https://www.reddit.com/r/decred/comments/ae07as/custom_decred_merch_with_19_discount_in_the/) with extra items and new Decred logos. All products can be personalized and tweaked.
+
+Urgent Notice: new batch of Stakey plushies is [available](https://www.reddit.com/r/decred/comments/ahalex/new_batch_of_stakey_plushies_available/)!
 
 ## Events
 
